# hopper-api

./: .coverage  .env.example  README.md  pyproject.toml  pytest.ini
.github/workflows/: bump.yml
src/: main.py
src/config/: settings.py
src/controllers/: __init__.py  auth_controller.py  group_controller.py  pipeline_controller.py  powerbi_controller.py  user_controller.py
src/middlewares/: __init__.py  auth.py
src/models/: __init__.py  group.py  user.py
src/routes/: __init__.py
src/services/: __init__.py  airflow_service.py  auth_service.py  group_service.py  powerbi_service.py  user_service.py
tests/: README.md  conftest.py  test_airflow_service.py  test_auth_controller.py  test_auth_service.py  test_group_controller.py  test_group_service.py  test_powerbi_service.py  test_user_controller.py  test_user_service.py
